--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
 .login-form {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 1rem;
 }
 
@@ -21,4 +22,60 @@
   background-color: var(--accent-color);
   opacity: 75%;
   z-index: -1;
+}
+
+.title {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-top: 8rem;
+  margin-bottom: 4rem;
+}
+.banner {
+  height: 211px;
+  margin: 20px;
+}
+
+.text-input {
+  display: block;
+  width: 300px;
+  height: 45px;
+  border-radius: 11px;
+  border: none;
+  margin: 5px 25px;
+  padding-left: 20px;
+}
+
+.text-input::placeholder {
+  color: var(--accent-color);
+  font-size: 13px;
+}
+
+.button {
+  background-color: var(--accent-color);
+  color: white;
+  width: 220px;
+  height: 44px;
+  min-height: 44px;
+  border-radius: 8px;
+  border: none;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+.todo-list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.todo-list li {
+  display: flex;
+  gap: 1rem;
+  width: 100%;
+  padding: 5px 10px;
+  margin: 2px;
+  border-radius: 8px;
+  border: 1px solid var(--accent-color);
+  background-color: var(--main-color);
 }
